[project]
name = "cloudyds"
version = "0.1"
description = "Setup DS Environments in the Cloud"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "James Balamuta"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/coatless/cloudyds"
Changelog = "https://github.com/coatless/cloudyds/releases"
Issues = "https://github.com/coatless/cloudyds/issues"
CI = "https://github.com/coatless/cloudyds/actions"


[project.optional-dependencies]
test = ["pytest"]
