[project]
name = "cloudyds"
dynamic = ["version"]
description = "A package to install and launch RStudio Server, VS Code Server, and Jupyter Lab with tunneling options"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "James Joseph Balamuta"}]
keywords = ["rstudio", "vscode", "jupyterlab", "server", "tunneling"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "click",
    "pyngrok",
    "py-localtunnel",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/coatless-py-pkg/cloudyds"
Changelog = "https://github.com/coatless-py-pkg/cloudyds/releases"
Issues = "https://github.com/coatless-py-pkg/cloudyds/issues"
CI = "https://github.com/coatless-py-pkg/cloudyds/actions"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
test = ["pytest"]

[tool.setuptools_scm]
write_to = "cloudyds/_version.py"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
